# TC

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CMakePresets-CI.json  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: CMakeLists.txt  how_to_use.rst  index.rst  input_in.rst  installation.rst  introduction.rst  tips_and_faq.rst  tutorial.rst
examples/HEG/: prefix.band.in
examples/Si/: input.in_scf
src/: CMakeLists.txt  Makefile  bloch_states_initialize.cpp  bloch_states_scfloop_eigenvalues.cpp  bloch_states_scfloop_filling_density.cpp  bloch_states_scfloop_phik.cpp  calc_hamiltonian_all.cpp  calc_hamiltonian_hf2h.cpp  calc_hamiltonian_hf2x.cpp  calc_hamiltonian_kinetic.cpp  calc_hamiltonian_pseudo.cpp  calc_hamiltonian_tc2h.cpp  calc_hamiltonian_tc2x.cpp  calc_hamiltonian_tc3a1.cpp  calc_hamiltonian_tc3a2a4b2b5.cpp  calc_hamiltonian_tc3a3b3b4b6.cpp  calc_hamiltonian_tc3b1.cpp  crystal_structure.cpp  diagonalization.cpp  diagonalization_davidson.cpp  diagonalization_utils.cpp  error_messages.cpp  file_names.cpp  io_tc_files_dump_bandplot.cpp  io_tc_files_dump_eigen.cpp  io_tc_files_dump_scfinfo.cpp  io_tc_files_read_eigen.cpp  io_tc_files_read_input_in.cpp  io_tc_files_read_scfinfo.cpp  jastrow_functions.cpp  jastrow_initialize.cpp  kpoints.cpp  main.cpp  method.cpp  my_clock.cpp  parallelization.cpp  plane_wave_basis.cpp  potentials_coulomb.cpp  potentials_pseudopot.cpp  read_qe.cpp  (+6 more)
src/include/: bloch_states.hpp  calc_hamiltonian.hpp  crystal_structure.hpp  (+17 more)
test/: CMakeLists.txt  test.py  test_full.py
(+26 files in other folders)
